newcustomer class added