@@ -1,21 +1,21 @@
 package Electricity;
 
 import java.awt.*;
-import java.awt.Color;
 import java.awt.event.*;
 import javax.swing.*;
 
-public class Project extends JFrame implements ActionListener{
+public class Project extends JFrame implements ActionListener {
     String meter;
-    Project(String meter, String person){
+
+    Project(String meter, String person) {
         super("Electricity Billing System");
         this.meter = meter;
 
-        setSize(1920,1030);
+        setSize(1920, 1030);
 
         // Adding background image
         ImageIcon ic = new ImageIcon(ClassLoader.getSystemResource("icon/electricity.jpg"));
-        Image i3 = ic.getImage().getScaledInstance(1920, 1030,Image.SCALE_DEFAULT);
+        Image i3 = ic.getImage().getScaledInstance(1920, 1030, Image.SCALE_DEFAULT);
         ImageIcon icc3 = new ImageIcon(i3);
         JLabel l1 = new JLabel(icc3);
         add(l1);
@@ -30,36 +30,36 @@ public class Project extends JFrame implements ActionListener{
         master.setForeground(Color.BLUE);
 
         // Customer Details
-        m1.setFont(new Font("monospaced",Font.PLAIN,12));
+        m1.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon1 = new ImageIcon(ClassLoader.getSystemResource("icon/icon1.png"));
-        Image image1 = icon1.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image1 = icon1.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         m1.setIcon(new ImageIcon(image1));
         m1.setMnemonic('D');
         m1.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_D, ActionEvent.CTRL_MASK));
         m1.setBackground(Color.WHITE);
 
         // Meter Details
-        m2.setFont(new Font("monospaced",Font.PLAIN,12));
+        m2.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon2 = new ImageIcon(ClassLoader.getSystemResource("icon/icon2.png"));
-        Image image2 = icon2.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image2 = icon2.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         m2.setIcon(new ImageIcon(image2));
         m2.setMnemonic('M');
         m2.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_M, ActionEvent.CTRL_MASK));
         m2.setBackground(Color.WHITE);
 
         // Deposit Details
-        m3.setFont(new Font("monospaced",Font.PLAIN,12));
+        m3.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon3 = new ImageIcon(ClassLoader.getSystemResource("icon/icon3.png"));
-        Image image3 = icon3.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image3 = icon3.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         m3.setIcon(new ImageIcon(image3));
         m3.setMnemonic('N');
         m3.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_N, ActionEvent.CTRL_MASK));
         m3.setBackground(Color.WHITE);
 
         // Calculate Bill
-        m4.setFont(new Font("monospaced",Font.PLAIN,12));
+        m4.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon5 = new ImageIcon(ClassLoader.getSystemResource("icon/icon5.png"));
-        Image image5 = icon5.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image5 = icon5.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         m4.setIcon(new ImageIcon(image5));
         m4.setMnemonic('B');
         m4.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_B, ActionEvent.CTRL_MASK));
@@ -70,7 +70,6 @@ public class Project extends JFrame implements ActionListener{
         m3.addActionListener(this);
         m4.addActionListener(this);
 
-
         // Second Column
         JMenu info = new JMenu("Information");
         JMenuItem info1 = new JMenuItem("Update Information");
@@ -79,18 +78,18 @@ public class Project extends JFrame implements ActionListener{
         info.setForeground(Color.RED);
 
         // Pay Bill
-        info1.setFont(new Font("monospaced",Font.PLAIN,12));
+        info1.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon41 = new ImageIcon(ClassLoader.getSystemResource("icon/icon4.png"));
-        Image image41 = icon41.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image41 = icon41.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         info1.setIcon(new ImageIcon(image41));
         info1.setMnemonic('P');
         info1.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, ActionEvent.CTRL_MASK));
         info1.setBackground(Color.WHITE);
 
         // Last Bill
-        info2.setFont(new Font("monospaced",Font.PLAIN,12));
+        info2.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon42 = new ImageIcon(ClassLoader.getSystemResource("icon/icon6.png"));
-        Image image42 = icon42.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image42 = icon42.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         info2.setIcon(new ImageIcon(image42));
         info2.setMnemonic('L');
         info2.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_L, ActionEvent.CTRL_MASK));
@@ -99,9 +98,7 @@ public class Project extends JFrame implements ActionListener{
         info1.addActionListener(this);
         info2.addActionListener(this);
 
-
-
-        //  Second column
+        // Second column
         JMenu user = new JMenu("User");
         JMenuItem u1 = new JMenuItem("Pay Bill");
 
@@ -109,18 +106,18 @@ public class Project extends JFrame implements ActionListener{
         user.setForeground(getForeground());
 
         // Pay Bill
-        u1.setFont(new Font("monospaced",Font.PLAIN,12));
+        u1.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon4 = new ImageIcon(ClassLoader.getSystemResource("icon/icon4.png"));
-        Image image4 = icon4.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image4 = icon4.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         u1.setIcon(new ImageIcon(image4));
         u1.setMnemonic('P');
         u1.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_P, ActionEvent.CTRL_MASK));
         u1.setBackground(Color.WHITE);
 
         // Last Bill
-        u3.setFont(new Font("monospaced",Font.PLAIN,12));
+        u3.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon6 = new ImageIcon(ClassLoader.getSystemResource("icon/icon6.png"));
-        Image image6 = icon6.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image6 = icon6.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         u3.setIcon(new ImageIcon(image6));
         u3.setMnemonic('L');
         u3.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_L, ActionEvent.CTRL_MASK));
@@ -129,15 +126,15 @@ public class Project extends JFrame implements ActionListener{
         u1.addActionListener(this);
         u3.addActionListener(this);
 
-        //  Third column
+        // Third column
         JMenu report = new JMenu("Report");
         JMenuItem r1 = new JMenuItem("Generate Bill");
         report.setForeground(Color.BLUE);
 
         // Report
-        r1.setFont(new Font("monospaced",Font.PLAIN,12));
+        r1.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon7 = new ImageIcon(ClassLoader.getSystemResource("icon/icon7.png"));
-        Image image7 = icon7.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image7 = icon7.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         r1.setIcon(new ImageIcon(image7));
         r1.setMnemonic('R');
         r1.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_R, ActionEvent.CTRL_MASK));
@@ -145,7 +142,7 @@ public class Project extends JFrame implements ActionListener{
 
         r1.addActionListener(this);
 
-        //  Fourth column
+        // Fourth column
         JMenu utility = new JMenu("Utility");
         JMenuItem ut1 = new JMenuItem("Notepad");
         JMenuItem ut2 = new JMenuItem("Calculator");
@@ -153,27 +150,27 @@ public class Project extends JFrame implements ActionListener{
         utility.setForeground(Color.RED);
 
         // Calender
-        ut1.setFont(new Font("monospaced",Font.PLAIN,12));
+        ut1.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon8 = new ImageIcon(ClassLoader.getSystemResource("icon/icon12.png"));
-        Image image8 = icon8.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image8 = icon8.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         ut1.setIcon(new ImageIcon(image8));
         ut1.setMnemonic('C');
         ut1.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_C, ActionEvent.CTRL_MASK));
         ut1.setBackground(Color.WHITE);
 
         // Calculator
-        ut2.setFont(new Font("monospaced",Font.PLAIN,12));
+        ut2.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon9 = new ImageIcon(ClassLoader.getSystemResource("icon/icon9.png"));
-        Image image9 = icon9.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image9 = icon9.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         ut2.setIcon(new ImageIcon(image9));
         ut2.setMnemonic('X');
         ut2.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_X, ActionEvent.CTRL_MASK));
         ut2.setBackground(Color.WHITE);
 
         // Web Browser
-        ut3.setFont(new Font("monospaced",Font.PLAIN,12));
+        ut3.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon10 = new ImageIcon(ClassLoader.getSystemResource("icon/icon10.png"));
-        Image image10 = icon10.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image10 = icon10.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         ut3.setIcon(new ImageIcon(image10));
         ut3.setMnemonic('W');
         ut3.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_W, ActionEvent.CTRL_MASK));
@@ -183,15 +180,15 @@ public class Project extends JFrame implements ActionListener{
         ut2.addActionListener(this);
         ut3.addActionListener(this);
 
-        //  Fifth column
+        // Fifth column
         JMenu exit = new JMenu("Logout");
         JMenuItem ex = new JMenuItem("Logout");
         exit.setForeground(Color.BLUE);
 
         // Exit
-        ex.setFont(new Font("monospaced",Font.PLAIN,12));
+        ex.setFont(new Font("monospaced", Font.PLAIN, 12));
         ImageIcon icon11 = new ImageIcon(ClassLoader.getSystemResource("icon/icon11.png"));
-        Image image11 = icon11.getImage().getScaledInstance(20, 20,Image.SCALE_DEFAULT);
+        Image image11 = icon11.getImage().getScaledInstance(20, 20, Image.SCALE_DEFAULT);
         ex.setIcon(new ImageIcon(image11));
         ex.setMnemonic('E');
         ex.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_E, ActionEvent.CTRL_MASK));
@@ -219,10 +216,9 @@ public class Project extends JFrame implements ActionListener{
 
         exit.add(ex);
 
-        if(person.equals("Admin")){
+        if (person.equals("Admin")) {
             mb.add(master);
-        }
-        else if(person.equals("Customer")){
+        } else if (person.equals("Customer")) {
             mb.add(info);
             mb.add(user);
             mb.add(report);
@@ -233,48 +229,60 @@ public class Project extends JFrame implements ActionListener{
         setJMenuBar(mb);
 
         // Adding the image to the frame
-        setFont(new Font("Senserif",Font.BOLD,16));
+        setFont(new Font("Senserif", Font.BOLD, 16));
         setLayout(new FlowLayout());
         setVisible(false);
 
     }
-    public void actionPerformed(ActionEvent ae){
+
+    public void actionPerformed(ActionEvent ae) {
         String msg = ae.getActionCommand();
-        if(msg.equals("Customer Details")){
+        if (msg.equals("Customer Details")) {
             new CustomerDetails().setVisible(true);
-        }else if(msg.equals("New Customer")){
+        } else if (msg.equals("New Customer")) {
             new NewCustomer().setVisible(true);
-        }else if(msg.equals("Calculate Bill")){
+        } else if (msg.equals("Calculate Bill")) {
             new CalculateBill().setVisible(true);
-        }else if(msg.equals("Pay Bill")){
+        } else if (msg.equals("Pay Bill")) {
             new PayBill(meter).setVisible(true);
-        }else if(msg.equals("Notepad")){
-            try{
-                Runtime.getRuntime().exec("notepad.exe");
-            }catch(Exception e){ }
-        }else if(msg.equals("Calculator")){
-            try{
-                Runtime.getRuntime().exec("calc.exe");
-            }catch(Exception e){ }
-        }else if(msg.equals("Web Browser")){
-            try{
-                Runtime.getRuntime().exec("C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe");
-            }catch(Exception e){ }
-        }else if(msg.equals("Logout")){
+        } else if (msg.equals("Notepad")) {
+            try {
+                ProcessBuilder pb = new ProcessBuilder("notepad.exe");
+                pb.start();
+            } catch (Exception e) {
+                e.printStackTrace(); // Print the exception for debugging
+            }
+        } else if (msg.equals("Calculator")) {
+            try {
+                ProcessBuilder pb = new ProcessBuilder("calc.exe");
+                pb.start();
+            } catch (Exception e) {
+                e.printStackTrace(); // Print the exception for debugging
+            }
+        } else if (msg.equals("Web Browser")) {
+            try {
+                ProcessBuilder pb = new ProcessBuilder(
+                        "C:\\Program Files (x86)\\Microsoft\\Edge\\Application\\msedge.exe");
+                pb.start();
+            } catch (Exception e) {
+                e.printStackTrace(); // Print the exception for debugging
+            }
+        } else if (msg.equals("Logout")) {
             this.setVisible(false);
             new Login().setVisible(true);
-        }else if(msg.equals("Generate Bill")){
+        } else if (msg.equals("Generate Bill")) {
             new GenerateBill(meter).setVisible(true);
-        }else if(msg.equals("Deposit Details")){
+        } else if (msg.equals("Deposit Details")) {
             new DepositDetails().setVisible(true);
-        }else if(msg.equals("View Information")){
+        } else if (msg.equals("View Information")) {
             new ViewInformation(meter).setVisible(true);
-        }else if(msg.equals("Update Information")){
+        } else if (msg.equals("Update Information")) {
             new UpdateInformation(meter).setVisible(true);
-        }else if(msg.equals("Bill Details")){
+        } else if (msg.equals("Bill Details")) {
             new BillDetails(meter).setVisible(true);
         }
     }
+
     public static void main(String[] args) {
         new Project("", "").setVisible(true);
     }
